# rinha-de-backend-2024

./: Cargo.toml
src/: main.rs
