[package]
name = "api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
tokio = { version = "1.36.0" , features = ["full"] }
tokio-postgres = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
coi = "0.10.3"
coi-derive = "0.10.1"
dotenv = "0.15.0"

